--- a/面向对象.html
+++ b/面向对象.html
@@ -15,7 +15,7 @@
         this.name = name
         this.age = age
         // this.age = age
-
+        //dawdaw
       }
       speak() {
         console.log(`我叫${this.name}${this.age}岁了`);
